--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="premium-grid-container">
                 <!-- Heritage (Large Item) -->
                 <div class="experience-item large" onclick="window.location.href='destinations.html#heritage'">
-                    <div class="experience-bg" style="background-image: url('images/dest-sigiriya.jpg');"></div>
+                    <div class="experience-bg" style="background-image: url('images/home/heritage.jpg');"></div>
                     <div class="experience-badge"><i class="fa fa-history"></i></div>
                     <div class="experience-overlay">
                         <div class="experience-content">
@@ -164,7 +164,7 @@
 
                 <!-- Wildlife (Standard) - Replaced Pristine -->
                 <div class="experience-item" onclick="window.location.href='destinations.html#wildlife'">
-                    <div class="experience-bg" style="background-image: url('images/dest-yala.jpg');"></div>
+                    <div class="experience-bg" style="background-image: url('images/home/wildlife.jpg');"></div>
                     <div class="experience-badge"><i class="fa fa-paw"></i></div>
                     <div class="experience-overlay">
                         <div class="experience-content">
@@ -176,7 +176,7 @@
 
                 <!-- Beach (Standard) - Renamed from Bliss -->
                 <div class="experience-item" onclick="window.location.href='destinations.html#beach'">
-                    <div class="experience-bg" style="background-image: url('images/dest-bentota.jpg');"></div>
+                    <div class="experience-bg" style="background-image: url('images/home/beach.jpg');"></div>
                     <div class="experience-badge"><i class="fa fa-sun-o"></i></div>
                     <div class="experience-overlay">
                         <div class="experience-content">
@@ -188,7 +188,7 @@
 
                 <!-- Adventure (Standard) - Renamed from Thrills -->
                 <div class="experience-item" onclick="window.location.href='destinations.html#adventure'">
-                    <div class="experience-bg" style="background-image: url('images/dest-ella.jpg');"></div>
+                    <div class="experience-bg" style="background-image: url('images/home/adventure.jpeg');"></div>
                     <div class="experience-badge"><i class="fa fa-compass"></i></div>
                     <div class="experience-overlay">
                         <div class="experience-content">
@@ -200,7 +200,7 @@
 
                 <!-- Cultural (Standard) - Renamed from Festive -->
                 <div class="experience-item" onclick="window.location.href='destinations.html#cultural'">
-                    <div class="experience-bg" style="background-image: url('images/dest-kandy.jpg');"></div>
+                    <div class="experience-bg" style="background-image: url('images/home/culture.jpg');"></div>
                     <div class="experience-badge"><i class="fa fa-university"></i></div>
                     <div class="experience-overlay">
                         <div class="experience-content">
@@ -295,8 +295,8 @@
                 <div class="col-md-4 ftco-animate">
                     <div class="project-wrap">
                         <a href="destinations.html#sigiriya" class="img"
-                            style="background-image: url(images/destination-1.jpg);">
-                            <span class="price">From $120/person</span>
+                            style="background-image: url(images/home/sigiriya.jpg);">
+                            <!-- <span class="price">From $120/person</span> -->
                         </a>
                         <div class="text p-4">
                             <span class="days">Full Day Tour</span>
@@ -312,8 +312,8 @@
                 <div class="col-md-4 ftco-animate">
                     <div class="project-wrap">
                         <a href="destinations.html#ella" class="img"
-                            style="background-image: url(images/destination-2.jpg);">
-                            <span class="price">From $90/person</span>
+                            style="background-image: url(images/home/ninearch.jpg);">
+                            <!-- <span class="price">From $90/person</span> -->
                         </a>
                         <div class="text p-4">
                             <span class="days">2 Days Tour</span>
@@ -329,8 +329,8 @@
                 <div class="col-md-4 ftco-animate">
                     <div class="project-wrap">
                         <a href="destinations.html#galle" class="img"
-                            style="background-image: url(images/destination-3.jpg);">
-                            <span class="price">From $80/person</span>
+                            style="background-image: url(images/home/galle.jpg);">
+                            <!-- <span class="price">From $80/person</span> -->
                         </a>
                         <div class="text p-4">
                             <span class="days">Full Day Tour</span>
