--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Ceylon Sang - Sri Lankan Tour Guide</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="preload" as="image" href="images/bg_1.jpg">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -514,20 +515,20 @@
                 stroke="#F96D00" />
         </svg></div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/jquery-migrate-3.0.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.easing.1.3.js"></script>
-    <script src="js/jquery.waypoints.min.js"></script>
-    <script src="js/jquery.stellar.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/jquery.animateNumber.min.js"></script>
-    <script src="js/bootstrap-datepicker.js"></script>
-    <script src="js/scrollax.min.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/video-autoplay.js"></script>
+    <script src="js/jquery.min.js" defer></script>
+    <script src="js/jquery-migrate-3.0.1.min.js" defer></script>
+    <script src="js/popper.min.js" defer></script>
+    <script src="js/bootstrap.min.js" defer></script>
+    <script src="js/jquery.easing.1.3.js" defer></script>
+    <script src="js/jquery.waypoints.min.js" defer></script>
+    <script src="js/jquery.stellar.min.js" defer></script>
+    <script src="js/owl.carousel.min.js" defer></script>
+    <script src="js/jquery.magnific-popup.min.js" defer></script>
+    <script src="js/jquery.animateNumber.min.js" defer></script>
+    <script src="js/bootstrap-datepicker.js" defer></script>
+    <script src="js/scrollax.min.js" defer></script>
+    <script src="js/main.js" defer></script>
+    <script src="js/video-autoplay.js" defer></script>
 
     <!-- Login Modal -->
     <div id="loginModal" class="modal">
@@ -595,9 +596,9 @@
     </div>
 
     <!-- Authentication Script -->
-    <script src="js/auth.js"></script>
+    <script src="js/auth.js" defer></script>
     <!-- Reviews Script -->
-    <script src="js/reviews.js"></script>
+    <script src="js/reviews.js" defer></script>
 </body>
 
 </html>
