--- a/packages.html
+++ b/packages.html
@@ -8,7 +8,7 @@
     <link rel="preload" as="image" href="images/bg_1.jpg">
 
     <link
-        href="https://fonts.googleapis.com/css2?family=Assistant:wght@300;400;600;700&family=Fraunces:wght@400;600;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/animate.css">
