feat: Add dedicated mobile-specific CSS enhancements and refactor the welcome section layout in `index.html` for improved responsiveness.

--- a/index.html
+++ b/index.html
@@ -217,67 +217,17 @@
     <!-- Services Section -->
     <section class="ftco-section services-section">
         <div class="container">
-            <div class="row d-flex">
-                <div class="col-md-6 order-md-last heading-section pl-md-5 ftco-animate d-flex align-items-center">
-                    <div class="w-100">
-                        <span class="subheading">Welcome to Ceylon Sang</span>
-                        <h2 class="mb-4">Your Gateway to Sri Lankan Adventures</h2>
-                        <p>With years of experience in showcasing the beauty of Sri Lanka, Ceylon Sang offers
-                            personalized tour experiences that capture the essence of this magnificent island. From
-                            pristine beaches to ancient temples, lush tea plantations to wildlife safaris, we bring you
-                            the best of Sri Lanka.</p>
-                        <p>Our expert local guides ensure you experience authentic Sri Lankan culture, cuisine, and
-                            hospitality while creating memories that last a lifetime.</p>
-                        <p><a href="about.html" class="btn btn-primary py-3 px-4">Learn More About Us</a></p>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="row">
-                        <div class="col-6 col-md-12 col-lg-6 d-flex align-self-stretch ftco-animate">
-                            <div class="services services-1 color-1 d-block img"
-                                style="background-image: url(images/services-1.jpg);">
-                                <div class="icon d-flex align-items-center justify-content-center"><span
-                                        class="flaticon-paragliding"></span></div>
-                                <div class="media-body">
-                                    <h3 class="heading mb-3">Adventure Tours</h3>
-                                    <p>Thrilling experiences from surfing to hiking</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-6 col-md-12 col-lg-6 d-flex align-self-stretch ftco-animate">
-                            <div class="services services-1 color-2 d-block img"
-                                style="background-image: url(images/services-2.jpg);">
-                                <div class="icon d-flex align-items-center justify-content-center"><span
-                                        class="flaticon-route"></span></div>
-                                <div class="media-body">
-                                    <h3 class="heading mb-3">Cultural Tours</h3>
-                                    <p>Explore ancient temples and heritage sites</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-6 col-md-12 col-lg-6 d-flex align-self-stretch ftco-animate">
-                            <div class="services services-1 color-3 d-block img"
-                                style="background-image: url(images/services-3.jpg);">
-                                <div class="icon d-flex align-items-center justify-content-center"><span
-                                        class="flaticon-tour-guide"></span></div>
-                                <div class="media-body">
-                                    <h3 class="heading mb-3">Wildlife Safaris</h3>
-                                    <p>Encounter elephants, leopards, and exotic birds</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-6 col-md-12 col-lg-6 d-flex align-self-stretch ftco-animate">
-                            <div class="services services-1 color-4 d-block img"
-                                style="background-image: url(images/services-4.jpg);">
-                                <div class="icon d-flex align-items-center justify-content-center"><span
-                                        class="flaticon-map"></span></div>
-                                <div class="media-body">
-                                    <h3 class="heading mb-3">Beach Getaways</h3>
-                                    <p>Relax on pristine tropical beaches</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+            <div class="row justify-content-center">
+                <div class="col-md-10 heading-section text-center ftco-animate">
+                    <span class="subheading">Welcome to Ceylon Sang</span>
+                    <h2 class="mb-4">Your Gateway to Sri Lankan Adventures</h2>
+                    <p>With years of experience in showcasing the beauty of Sri Lanka, Ceylon Sang offers
+                        personalized tour experiences that capture the essence of this magnificent island. From
+                        pristine beaches to ancient temples, lush tea plantations to wildlife safaris, we bring you
+                        the best of Sri Lanka.</p>
+                    <p>Our expert local guides ensure you experience authentic Sri Lankan culture, cuisine, and
+                        hospitality while creating memories that last a lifetime.</p>
+                    <p class="mt-4"><a href="about.html" class="btn btn-primary py-3 px-4">Learn More About Us</a></p>
                 </div>
             </div>
         </div>
