feat: Add new destination images and Hakgala Botanical Garden, update details for Peradeniya Botanical Gardens, and standardize image paths for several existing destinations.

--- a/destinations.html
+++ b/destinations.html
@@ -469,27 +469,28 @@
                 </div>
 
                 <!-- Royal Botanical Gardens -->
+                <!-- Peradeniya Botanical Gardens -->
                 <div class="destination-detail" data-category="wildlife">
                     <div class="destination-detail-img" style="background-image: url(images/dest-royal-botanical.jpg);">
                         <div class="card-badge category">NATURE</div>
-                        <div class="card-badge rating"><i class="fa fa-star"></i> 4.7</div>
+                        <div class="card-badge rating"><i class="fa fa-star"></i> 4.8</div>
                     </div>
                     <div class="destination-detail-content">
-                        <h2>Royal Botanical Gardens</h2>
-                        <p class="location"><span class="fa fa-map-marker"></span> Central Province</p>
+                        <h2>Peradeniya Botanical Gardens</h2>
+                        <p class="location"><span class="fa fa-map-marker"></span> Peradeniya, Kandy</p>
 
                         <!-- Hidden Data for Modal Popup -->
                         <div class="destination-popup-data" style="display: none;">
                             <div class="popup-overview">
                                 <p>Renowned for its collection of orchids, spices, medicinal plants, and palm trees. It
-                                    is
-                                    the
-                                    largest botanical garden in Sri Lanka.</p>
+                                    is the largest botanical garden in Sri Lanka, situated in a loop of the Mahaweli
+                                    River.</p>
                             </div>
                             <ul class="popup-attractions">
                                 <li>The Orchid House</li>
                                 <li>Giant Bamboo of Burma</li>
                                 <li>Cannonball Avenue</li>
+                                <li>Javan Fig Tree</li>
                             </ul>
                             <div class="popup-info">
                                 <div class="info-row"><i class="fa fa-clock-o"></i>
@@ -505,10 +506,47 @@
                     </div>
                 </div>
 
+                <!-- Hakgala Botanical Garden -->
+                <div class="destination-detail" data-category="wildlife">
+                    <div class="destination-detail-img" style="background-image: url(images/dest-nuwara-eliya.jpg);">
+                        <div class="card-badge category">NATURE</div>
+                        <div class="card-badge rating"><i class="fa fa-star"></i> 4.7</div>
+                    </div>
+                    <div class="destination-detail-content">
+                        <h2>Hakgala Botanical Garden</h2>
+                        <p class="location"><span class="fa fa-map-marker"></span> Nuwara Eliya</p>
+
+                        <!-- Hidden Data for Modal Popup -->
+                        <div class="destination-popup-data" style="display: none;">
+                            <div class="popup-overview">
+                                <p>The second largest botanical garden in Sri Lanka, famous for its cool climate,
+                                    impressive collection of roses, and ferns. It is situated on the slopes of the
+                                    Hakgala Rock.</p>
+                            </div>
+                            <ul class="popup-attractions">
+                                <li>The Rose Garden</li>
+                                <li>Fernery</li>
+                                <li>Japanese Garden</li>
+                                <li>Cool Climate Flora</li>
+                            </ul>
+                            <div class="popup-info">
+                                <div class="info-row"><i class="fa fa-clock-o"></i>
+                                    <div><strong>Duration</strong><span>1-2 hours</span></div>
+                                </div>
+                                <div class="info-row"><i class="fa fa-tag"></i>
+                                    <div><strong>Type</strong><span>Nature</span></div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <a href="#" class="explore-link mt-auto">Explore <i class="fa fa-arrow-right"></i></a>
+                    </div>
+                </div>
+
                 <!-- Western Province -->
                 <!-- Colombo -->
                 <div class="destination-detail" data-category="cultural">
-                    <div class="destination-detail-img" style="background-image: url(images/dest-colombo.jpg);">
+                    <div class="destination-detail-img" style="background-image: url(images/destinations/colombo/colombo.jpg);">
                         <div class="card-badge category">CITY</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.5</div>
                     </div>
@@ -908,7 +946,8 @@
                 <!-- Udawalawe (Simplified) -->
                 <!-- Udawalawe -->
                 <div class="destination-detail" data-category="wildlife">
-                    <div class="destination-detail-img" style="background-image: url(images/dest-udawalawe.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/Udawalawe/Udawalawe.jpg);">
                         <div class="card-badge category">WILDLIFE</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.8</div>
                     </div>
@@ -1403,7 +1442,8 @@
 
                 <!-- Minneriya -->
                 <div class="destination-detail" data-category="wildlife">
-                    <div class="destination-detail-img" style="background-image: url(images/destination-2.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/minneriya/Minneriya.jpg);">
                         <div class="card-badge category">WILDLIFE</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.8</div>
                     </div>
@@ -1471,7 +1511,8 @@
                 </div>
                 <!-- Ritigala -->
                 <div class="destination-detail" data-category="adventure">
-                    <div class="destination-detail-img" style="background-image: url(images/destination-5.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/Ritigala/Ritigala.jpg);">
                         <div class="card-badge category">ADVENTURE</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.5</div>
                     </div>
@@ -1569,7 +1610,8 @@
                 </div>
                 <!-- Wilpattu -->
                 <div class="destination-detail" data-category="wildlife">
-                    <div class="destination-detail-img" style="background-image: url(images/dest-wilpattu.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/wilpaththu/wilpaththu.jpg);">
                         <div class="card-badge category">WILDLIFE</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.8</div>
                     </div>
@@ -1837,7 +1879,8 @@
                 </div>
                 <!-- Pinnawala -->
                 <div class="destination-detail" data-category="wildlife">
-                    <div class="destination-detail-img" style="background-image: url(images/dest-udawalawe.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/pinnawala/Pinnawala.jpg);">
                         <div class="card-badge category">WILDLIFE</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.6</div>
                     </div>
@@ -1867,39 +1910,11 @@
                         <a href="#" class="explore-link mt-auto">Explore <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
-                <!-- Udawalawe (Side) -->
-                <div class="destination-detail" data-category="wildlife">
-                    <div class="destination-detail-img" style="background-image: url(images/dest-udawalawe.jpg);">
-                        <div class="card-badge category">WILDLIFE</div>
-                        <div class="card-badge rating"><i class="fa fa-star"></i> 4.8</div>
-                    </div>
-                    <div class="destination-detail-content">
-                        <h2>Udawalawe (Sabaragamuwa)</h2>
-                        <p class="location"><span class="fa fa-map-marker"></span> Sabaragamuwa Province</p>
 
-                        <!-- Hidden Data for Modal Popup -->
-                        <div class="destination-popup-data" style="display: none;">
-                            <div class="popup-overview">
-                                <p>Access to the famous National Park from the northern side. It provides excellent
-                                    opportunities for seeing elephants in the wild.</p>
-                            </div>
-                            <ul class="popup-attractions">
-                                <li>Elephant sightings</li>
-                                <li>Scenic reservoir views</li>
-                            </ul>
-                            <div class="popup-info">
-                                <div class="info-row"><i class="fa fa-tag"></i>
-                                    <div><strong>Type</strong><span>Wildlife</span></div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <a href="#" class="explore-link mt-auto">Explore <i class="fa fa-arrow-right"></i></a>
-                    </div>
-                </div>
                 <!-- Kitulgala -->
                 <div class="destination-detail" data-category="adventure">
-                    <div class="destination-detail-img" style="background-image: url(images/dest-kitulgala.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/Kitulgala/Kitulgala.jpg);">
                         <div class="card-badge category">ADVENTURE</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.7</div>
                     </div>
@@ -1930,7 +1945,8 @@
                 </div>
                 <!-- Bopath Ella -->
                 <div class="destination-detail" data-category="adventure">
-                    <div class="destination-detail-img" style="background-image: url(images/destination-6.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/BopathElla/BopathElla.jpg);">
                         <div class="card-badge category">NATURE</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.3</div>
                     </div>
