--- a/packages.html
+++ b/packages.html
@@ -89,7 +89,7 @@
                             <h3>Cultural Triangle Explorer</h3>
                             <p>Immerse yourself in Sri Lanka's ancient heritage with visits to UNESCO World Heritage
                                 Sites.</p>
-                            <div class="package-price">From $850/person</div>
+
                             <ul class="list-unstyled mb-3">
                                 <li><i class="fa fa-check"></i> Sigiriya Rock Fortress</li>
                                 <li><i class="fa fa-check"></i> Anuradhapura Ancient City</li>
@@ -97,7 +97,8 @@
                                 <li><i class="fa fa-check"></i> Dambulla Cave Temple</li>
                                 <li><i class="fa fa-check"></i> Kandy Temple of Tooth</li>
                             </ul>
-                            <a href="contact.html" class="btn btn-primary btn-block">Book Now</a>
+                            <a href="javascript:void(0);" class="btn btn-whatsapp btn-block send-inquiry-btn"><i
+                                    class="fa fa-whatsapp"></i> Book via WhatsApp</a>
                         </div>
                     </div>
                 </div>
@@ -110,7 +111,7 @@
                             <span class="package-duration">5 Days / 4 Nights</span>
                             <h3>Beach & Wildlife Safari</h3>
                             <p>Perfect blend of relaxation on pristine beaches and thrilling wildlife encounters.</p>
-                            <div class="package-price">From $650/person</div>
+
                             <ul class="list-unstyled mb-3">
                                 <li><i class="fa fa-check"></i> Yala National Park Safari</li>
                                 <li><i class="fa fa-check"></i> Mirissa Beach Relaxation</li>
@@ -118,7 +119,8 @@
                                 <li><i class="fa fa-check"></i> Galle Fort Visit</li>
                                 <li><i class="fa fa-check"></i> Coastal Scenic Drive</li>
                             </ul>
-                            <a href="contact.html" class="btn btn-primary btn-block">Book Now</a>
+                            <a href="javascript:void(0);" class="btn btn-whatsapp btn-block send-inquiry-btn"><i
+                                    class="fa fa-whatsapp"></i> Book via WhatsApp</a>
                         </div>
                     </div>
                 </div>
@@ -131,7 +133,7 @@
                             <span class="package-duration">10 Days / 9 Nights</span>
                             <h3>Complete Sri Lanka</h3>
                             <p>Comprehensive tour covering culture, nature, beaches, and wildlife across the island.</p>
-                            <div class="package-price">From $1,200/person</div>
+
                             <ul class="list-unstyled mb-3">
                                 <li><i class="fa fa-check"></i> All Cultural Triangle Sites</li>
                                 <li><i class="fa fa-check"></i> Hill Country & Tea Estates</li>
@@ -139,7 +141,8 @@
                                 <li><i class="fa fa-check"></i> Beach Destinations</li>
                                 <li><i class="fa fa-check"></i> Scenic Train Journey</li>
                             </ul>
-                            <a href="contact.html" class="btn btn-primary btn-block">Book Now</a>
+                            <a href="javascript:void(0);" class="btn btn-whatsapp btn-block send-inquiry-btn"><i
+                                    class="fa fa-whatsapp"></i> Book via WhatsApp</a>
                         </div>
                     </div>
                 </div>
@@ -153,7 +156,7 @@
                             <h3>Hill Country & Tea Trails</h3>
                             <p>Experience the misty mountains, tea plantations, and colonial charm of Sri Lanka's
                                 highlands.</p>
-                            <div class="package-price">From $750/person</div>
+
                             <ul class="list-unstyled mb-3">
                                 <li><i class="fa fa-check"></i> Nuwara Eliya Tea Estates</li>
                                 <li><i class="fa fa-check"></i> Ella & Nine Arch Bridge</li>
@@ -161,7 +164,8 @@
                                 <li><i class="fa fa-check"></i> Scenic Train Ride</li>
                                 <li><i class="fa fa-check"></i> Tea Factory Tours</li>
                             </ul>
-                            <a href="contact.html" class="btn btn-primary btn-block">Book Now</a>
+                            <a href="javascript:void(0);" class="btn btn-whatsapp btn-block send-inquiry-btn"><i
+                                    class="fa fa-whatsapp"></i> Book via WhatsApp</a>
                         </div>
                     </div>
                 </div>
@@ -174,7 +178,7 @@
                             <span class="package-duration">4 Days / 3 Nights</span>
                             <h3>Wildlife & Nature Adventure</h3>
                             <p>Dedicated wildlife safari experience with visits to multiple national parks.</p>
-                            <div class="package-price">From $580/person</div>
+
                             <ul class="list-unstyled mb-3">
                                 <li><i class="fa fa-check"></i> Yala National Park</li>
                                 <li><i class="fa fa-check"></i> Udawalawe Elephant Park</li>
@@ -182,7 +186,8 @@
                                 <li><i class="fa fa-check"></i> Bird Watching</li>
                                 <li><i class="fa fa-check"></i> Nature Walks</li>
                             </ul>
-                            <a href="contact.html" class="btn btn-primary btn-block">Book Now</a>
+                            <a href="javascript:void(0);" class="btn btn-whatsapp btn-block send-inquiry-btn"><i
+                                    class="fa fa-whatsapp"></i> Book via WhatsApp</a>
                         </div>
                     </div>
                 </div>
@@ -195,7 +200,7 @@
                             <span class="package-duration">8 Days / 7 Nights</span>
                             <h3>Coastal Paradise Tour</h3>
                             <p>Explore Sri Lanka's stunning coastline from south to east with beach activities.</p>
-                            <div class="package-price">From $920/person</div>
+
                             <ul class="list-unstyled mb-3">
                                 <li><i class="fa fa-check"></i> Galle Fort & Beaches</li>
                                 <li><i class="fa fa-check"></i> Mirissa Whale Watching</li>
@@ -203,7 +208,8 @@
                                 <li><i class="fa fa-check"></i> Trincomalee Beaches</li>
                                 <li><i class="fa fa-check"></i> Water Sports Activities</li>
                             </ul>
-                            <a href="contact.html" class="btn btn-primary btn-block">Book Now</a>
+                            <a href="javascript:void(0);" class="btn btn-whatsapp btn-block send-inquiry-btn"><i
+                                    class="fa fa-whatsapp"></i> Book via WhatsApp</a>
                         </div>
                     </div>
                 </div>
@@ -216,7 +222,7 @@
                             <span class="package-duration">3 Days / 2 Nights</span>
                             <h3>Weekend Getaway</h3>
                             <p>Perfect short escape to experience the highlights of Sri Lanka in a long weekend.</p>
-                            <div class="package-price">From $420/person</div>
+
                             <ul class="list-unstyled mb-3">
                                 <li><i class="fa fa-check"></i> Sigiriya Rock Fortress</li>
                                 <li><i class="fa fa-check"></i> Dambulla Cave Temple</li>
@@ -224,7 +230,8 @@
                                 <li><i class="fa fa-check"></i> Temple of Tooth Relic</li>
                                 <li><i class="fa fa-check"></i> Cultural Dance Show</li>
                             </ul>
-                            <a href="contact.html" class="btn btn-primary btn-block">Book Now</a>
+                            <a href="javascript:void(0);" class="btn btn-whatsapp btn-block send-inquiry-btn"><i
+                                    class="fa fa-whatsapp"></i> Book via WhatsApp</a>
                         </div>
                     </div>
                 </div>
@@ -237,7 +244,7 @@
                             <span class="package-duration">12 Days / 11 Nights</span>
                             <h3>Grand Sri Lanka Tour</h3>
                             <p>The ultimate Sri Lankan experience covering every major attraction and hidden gems.</p>
-                            <div class="package-price">From $1,580/person</div>
+
                             <ul class="list-unstyled mb-3">
                                 <li><i class="fa fa-check"></i> All UNESCO Sites</li>
                                 <li><i class="fa fa-check"></i> Multiple Wildlife Safaris</li>
@@ -245,7 +252,8 @@
                                 <li><i class="fa fa-check"></i> Cultural Experiences</li>
                                 <li><i class="fa fa-check"></i> Adventure Activities</li>
                             </ul>
-                            <a href="contact.html" class="btn btn-primary btn-block">Book Now</a>
+                            <a href="javascript:void(0);" class="btn btn-whatsapp btn-block send-inquiry-btn"><i
+                                    class="fa fa-whatsapp"></i> Book via WhatsApp</a>
                         </div>
                     </div>
                 </div>
@@ -258,7 +266,7 @@
                             <span class="package-duration">Flexible Duration</span>
                             <h3>Custom Tour Package</h3>
                             <p>Design your own perfect Sri Lankan adventure with our help and expertise.</p>
-                            <div class="package-price">Price on Request</div>
+
                             <ul class="list-unstyled mb-3">
                                 <li><i class="fa fa-check"></i> Personalized Itinerary</li>
                                 <li><i class="fa fa-check"></i> Flexible Schedule</li>
@@ -266,7 +274,8 @@
                                 <li><i class="fa fa-check"></i> Private Guide & Vehicle</li>
                                 <li><i class="fa fa-check"></i> Tailored to Your Budget</li>
                             </ul>
-                            <a href="contact.html" class="btn btn-primary btn-block">Plan Your Tour</a>
+                            <a href="javascript:void(0);" class="btn btn-whatsapp btn-block send-inquiry-btn"><i
+                                    class="fa fa-whatsapp"></i> Book via WhatsApp</a>
                         </div>
                     </div>
                 </div>
@@ -512,6 +521,33 @@
     <script src="js/scrollax.min.js" defer></script>
     <script src="js/main.js" defer></script>
     <script src="js/auth.js" defer></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const sendButtons = document.querySelectorAll('.send-inquiry-btn');
+
+            sendButtons.forEach(button => {
+                button.addEventListener('click', function (e) {
+                    e.preventDefault();
+
+                    const card = this.closest('.package-card package-content') || this.closest('.package-content');
+                    if (!card) return;
+
+                    const title = card.querySelector('h3').textContent.trim();
+                    const duration = card.querySelector('.package-duration').textContent.trim();
+
+                    // Format message
+                    const message = `Hi, I'm interested in the *${title}* package.\n\nDetails:\n- ${duration}\n\nCould you please send me more information?`;
+
+                    // WhatsApp API URL (using number from footer)
+                    const phoneNumber = "94771234567";
+                    const whatsappUrl = `https://wa.me/${phoneNumber}?text=${encodeURIComponent(message)}`;
+
+                    // Open in new tab
+                    window.open(whatsappUrl, '_blank');
+                });
+            });
+        });
+    </script>
 </body>
 
 </html>
