feat: Implement a hero video background and update destination image paths on the destinations page.

--- a/destinations.html
+++ b/destinations.html
@@ -55,7 +55,11 @@
         </div>
     </nav>
 
-    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/bg_1.jpg');">
+    <section class="hero-wrap hero-wrap-2 js-fullheight">
+        <video autoplay muted loop playsinline webkit-playsinline preload="auto" id="hero-video" class="hero-video">
+            <source src="https://cdn.pixabay.com/video/2023/08/22/177127-856658451_large.mp4" type="video/mp4">
+        </video>
+        <div class="hero-video-fallback" style="background-image: url('images/bg_1.jpg');"></div>
         <div class="overlay"></div>
         <div class="container">
             <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
@@ -221,7 +225,8 @@
 
                 <!-- Nuwara Eliya -->
                 <div class="destination-detail" id="nuwara-eliya" data-category="adventure">
-                    <div class="destination-detail-img" style="background-image: url(images/dest-nuwara-eliya.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/NuwaraEliya/nuwaraeliya.jpg);">
                         <div class="card-badge category">HILL COUNTRY</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.8</div>
                     </div>
@@ -433,7 +438,8 @@
 
                 <!-- Matale -->
                 <div class="destination-detail" data-category="cultural">
-                    <div class="destination-detail-img" style="background-image: url(images/dest-matale.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/MataleSpiceGardens/MataleSpiceGardens.jpg);">
                         <div class="card-badge category">CULTURAL</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.5</div>
                     </div>
@@ -471,7 +477,8 @@
                 <!-- Royal Botanical Gardens -->
                 <!-- Peradeniya Botanical Gardens -->
                 <div class="destination-detail" data-category="wildlife">
-                    <div class="destination-detail-img" style="background-image: url(images/destinations/Peradeniya/Peradeniya.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/Peradeniya/Peradeniya.jpg);">
                         <div class="card-badge category">NATURE</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.8</div>
                     </div>
@@ -508,7 +515,8 @@
 
                 <!-- Hakgala Botanical Garden -->
                 <div class="destination-detail" data-category="wildlife">
-                    <div class="destination-detail-img" style="background-image: url(images/destinations/haggala/hakgala.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/haggala/hakgala.jpg);">
                         <div class="card-badge category">NATURE</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.7</div>
                     </div>
@@ -546,7 +554,8 @@
                 <!-- Western Province -->
                 <!-- Colombo -->
                 <div class="destination-detail" data-category="cultural">
-                    <div class="destination-detail-img" style="background-image: url(images/destinations/colombo/colombo.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/colombo/colombo.jpg);">
                         <div class="card-badge category">CITY</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.5</div>
                     </div>
@@ -613,7 +622,8 @@
 
                 <!-- Mount Lavinia -->
                 <div class="destination-detail" data-category="beach">
-                    <div class="destination-detail-img" style="background-image: url(images/destination-9.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/MountLavinia/MountLavinia.jpg);">
                         <div class="card-badge category">BEACH</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.3</div>
                     </div>
@@ -911,7 +921,8 @@
                 <!-- Mirissa (Simplified) -->
                 <!-- Bentota -->
                 <div class="destination-detail" data-category="beach">
-                    <div class="destination-detail-img" style="background-image: url(images/dest-bentota.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/benthota/Bentota.jpg);">
                         <div class="card-badge category">BEACH</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.5</div>
                     </div>
@@ -983,7 +994,8 @@
                 <!-- Tangalle (Simplified) -->
                 <!-- Tangalle -->
                 <div class="destination-detail" data-category="beach">
-                    <div class="destination-detail-img" style="background-image: url(images/destinations/tangalle/tangalle.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/tangalle/tangalle.jpg);">
                         <div class="card-badge category">BEACH</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.5</div>
                     </div>
@@ -1017,7 +1029,8 @@
                 <!-- Nallur (Detailed) -->
                 <!-- Nallur -->
                 <div class="destination-detail" data-category="cultural">
-                    <div class="destination-detail-img" style="background-image: url(images/destinations/Nallur/Nallur.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/Nallur/Nallur.jpg);">
                         <div class="card-badge category">CULTURAL</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.8</div>
                     </div>
@@ -1086,7 +1099,8 @@
                 <!-- Nagadeepa (Detailed) -->
                 <!-- Nagadeepa -->
                 <div class="destination-detail" data-category="cultural">
-                    <div class="destination-detail-img" style="background-image: url(images/destinations/Nagadeepa/Nagadeepa.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/Nagadeepa/Nagadeepa.jpg);">
                         <div class="card-badge category">RELIGIOUS</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.7</div>
                     </div>
@@ -1120,7 +1134,8 @@
                 <!-- Delft (Detailed) -->
                 <!-- Delft Island -->
                 <div class="destination-detail" data-category="adventure">
-                    <div class="destination-detail-img" style="background-image: url(images/destinations/delf/delf.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/delf/delf.jpg);">
                         <div class="card-badge category">ADVENTURE</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.5</div>
                     </div>
@@ -1325,7 +1340,8 @@
                 </div>
                 <!-- Koneswaram Temple -->
                 <div class="destination-detail" data-category="cultural">
-                    <div class="destination-detail-img" style="background-image: url(images/destinations/koneshwaram/koneshwaram.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/koneshwaram/koneshwaram.jpg);">
                         <div class="card-badge category">RELIGIOUS</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.8</div>
                     </div>
@@ -2158,6 +2174,7 @@
     <script src="js/bootstrap-datepicker.js" defer></script>
     <script src="js/scrollax.min.js" defer></script>
     <script src="js/main.js" defer></script>
+    <script src="js/video-autoplay.js" defer></script>
     <script src="js/auth.js" defer></script>
     <script src="js/destinations.js" defer></script>
 </body>
