--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,11 @@
         </div>
     </nav>
 
-    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/bg_1.jpg');">
+    <section class="hero-wrap hero-wrap-2 js-fullheight">
+        <video autoplay muted loop playsinline webkit-playsinline preload="auto" id="hero-video" class="hero-video">
+            <source src="https://cdn.pixabay.com/video/2024/11/20/242272_large.mp4" type="video/mp4">
+        </video>
+        <div class="hero-video-fallback" style="background-image: url('images/bg_1.jpg');"></div>
         <div class="overlay"></div>
         <div class="container">
             <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
