--- a/gallery.html
+++ b/gallery.html
@@ -54,7 +54,11 @@
         </div>
     </nav>
 
-    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/bg_1.jpg');">
+    <section class="hero-wrap hero-wrap-2 js-fullheight">
+        <video autoplay muted loop playsinline webkit-playsinline preload="auto" id="hero-video" class="hero-video">
+            <source src="https://cdn.pixabay.com/video/2025/07/03/289235_large.mp4" type="video/mp4">
+        </video>
+        <div class="hero-video-fallback" style="background-image: url('images/bg_1.jpg');"></div>
         <div class="overlay"></div>
         <div class="container">
             <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
@@ -476,6 +480,7 @@
     <script src="js/bootstrap-datepicker.js" defer></script>
     <script src="js/scrollax.min.js" defer></script>
     <script src="js/main.js" defer></script>
+    <script src="js/video-autoplay.js" defer></script>
     <script src="js/auth.js" defer></script>
     <script src="js/gallery.js" defer></script>
 </body>
