--- a/contact.html
+++ b/contact.html
@@ -142,8 +142,24 @@
                             <textarea cols="30" rows="7" class="form-control" placeholder="Your Message *"
                                 required></textarea>
                         </div>
-                        <div class="form-group">
-                            <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
+                        <div class="action-area-wrapper">
+                            <button type="submit" class="btn-premium-primary">
+                                <i class="fa fa-envelope"></i> Send Message
+                            </button>
+
+                            <div class="action-divider">
+                                <span class="divider-line"></span>
+                                <span class="divider-text">or</span>
+                                <span class="divider-line"></span>
+                            </div>
+
+                            <a href="https://wa.me/94771234567?text=Hi,%20I'm%20interested%20in%20Ceylon%20Sang%20Tours"
+                                class="btn-premium-secondary" target="_blank">
+                                <div class="btn-label">
+                                    <i class="fa fa-whatsapp"></i> Chat on WhatsApp
+                                </div>
+                                <div class="btn-subtext">Instant reply recommended</div>
+                            </a>
                         </div>
                     </form>
                 </div>
